@@ -1,4 +1,4 @@
- $Id: ChangeLog,v 1.131.2.25.2.85 2010/09/20 08:35:59 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.25.2.86 2010/09/20 08:40:03 uehira Exp $
 
 2010-09-20  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* src/extraw.c : 64 bit clean.
@@ -7,6 +7,7 @@
 	* src/finalb2final.c : 64bit check.
 	* src/finalb2seis.c : 64bit check.
 	* src/find_picks.c : 64bit check.
+	* src/pick2final.c : 64bit check.
 	* src/pick2finalb.c : 64bit check.
 	* while(1) --> for(;;)
 	* adj_sec() moved to 'src/winlib.c'.
